# ising

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  simulator.cpp
